test/files/neg/t0842.scala
trait A[T] { def m: this.type[T] = this }
